--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p id="error"></p>
 
   <script type="module">
-    import * as tmAudio from "https://cdn.jsdelivr.net/npm/@teachablemachine/audio@0.8/dist/audio.esm.js";
+    import * as tmAudio from "https://cdn.jsdelivr.net/npm/@teachablemachine/audio/dist/audio.esm.js";
 
     // ? Your Teachable Machine model link
     const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
