--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <button id="startBtn">🎙️ Start Listening</button>
   <p id="error"></p>
 
-  <!-- Load Teachable Machine audio from Google's official CDN -->
-  <script src="https://storage.googleapis.com/tm-model/teachablemachine-audio.min.js"></script>
+  <!-- Load Teachable Machine audio from jsDelivr (official TM export method) -->
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/audio"></script>
   <script>
     const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
     const modelURL = URL + "model.json";
@@ -40,8 +40,8 @@
         document.getElementById("status").textContent = "Loading model...";
 
         console.log("Loading model from:", modelURL);
-        model = await window.tmAudio.load(modelURL, metadataURL);
-        recognizer = new window.tmAudio.AudioRecognizer(model);
+        model = await tmAudio.load(modelURL, metadataURL);
+        recognizer = new tmAudio.AudioRecognizer(model);
         await recognizer.open();
 
         document.getElementById("status").textContent = "Model Loaded — Listening...";
