--- a/index.html
+++ b/index.html
@@ -22,60 +22,62 @@
   <button id="startBtn">🎙️ Start Listening</button>
   <p id="error"></p>
 
-  <!-- Load Teachable Machine audio from jsDelivr (official TM export method) -->
+  <!-- Load Teachable Machine audio -->
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/audio"></script>
   <script>
-    const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
-    const modelURL = URL + "model.json";
-    const metadataURL = URL + "metadata.json";
+    window.onload = () => {
+      const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
 
-    let model, recognizer;
-    let count = 0;
-    let lastDetectedTime = 0;
+      let model, recognizer;
+      let count = 0;
+      let lastDetectedTime = 0;
 
-    async function init() {
-      try {
-        console.log("Requesting microphone access...");
-        await navigator.mediaDevices.getUserMedia({ audio: true });
-        document.getElementById("status").textContent = "Loading model...";
+      async function init() {
+        try {
+          console.log("Requesting microphone access...");
+          await navigator.mediaDevices.getUserMedia({ audio: true });
+          document.getElementById("status").textContent = "Loading model...";
 
-        console.log("Loading model from:", modelURL);
-        model = await tmAudio.load(modelURL, metadataURL);
-        recognizer = new tmAudio.AudioRecognizer(model);
-        await recognizer.open();
+          console.log("Loading model from:", modelURL);
+          model = await tmAudio.load(modelURL, metadataURL);
+          recognizer = new tmAudio.AudioRecognizer(model);
+          await recognizer.open();
 
-        document.getElementById("status").textContent = "Model Loaded — Listening...";
-        console.log("Model loaded, now listening...");
+          document.getElementById("status").textContent = "Model Loaded — Listening...";
+          console.log("Model loaded, now listening...");
 
-        recognizer.listen((result) => {
-          const highest = result.scores.reduce((prev, score, idx) => {
-            return score > prev.score ? {score, idx} : prev;
-          }, {score: -Infinity, idx: -1});
-          const label = model.labels[highest.idx];
-          const confidence = (highest.score * 100).toFixed(1);
+          recognizer.listen((result) => {
+            const highest = result.scores.reduce((prev, score, idx) => {
+              return score > prev.score ? {score, idx} : prev;
+            }, {score: -Infinity, idx: -1});
+            const label = model.labels[highest.idx];
+            const confidence = (highest.score * 100).toFixed(1);
 
-          document.getElementById("label").textContent = label;
-          document.getElementById("confidence").textContent = confidence + "%";
-          console.log("Detected:", label, "Confidence:", confidence + "%", result.scores);
+            document.getElementById("label").textContent = label;
+            document.getElementById("confidence").textContent = confidence + "%";
+            console.log("Detected:", label, "Confidence:", confidence + "%", result.scores);
 
-          if (label === "Cockerel") {
-            const now = Date.now();
-            if (now - lastDetectedTime > 2000) {
-              count++;
-              lastDetectedTime = now;
-              document.getElementById("count").textContent = count;
-              console.log("Crow Count:", count);
+            if (label === "Cockerel") {
+              const now = Date.now();
+              if (now - lastDetectedTime > 2000) {
+                count++;
+                lastDetectedTime = now;
+                document.getElementById("count").textContent = count;
+                console.log("Crow Count:", count);
+              }
             }
-          }
-        });
-      } catch (err) {
-        document.getElementById("status").textContent = "Error";
-        document.getElementById("error").textContent = err.message;
-        console.error("Crow Counter Error:", err);
+          });
+        } catch (err) {
+          document.getElementById("status").textContent = "Error";
+          document.getElementById("error").textContent = err.message;
+          console.error("Crow Counter Error:", err);
+        }
       }
-    }
 
-    document.getElementById("startBtn").addEventListener("click", init);
+      document.getElementById("startBtn").addEventListener("click", init);
+    };
   </script>
 </body>
 </html>
