--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>🐓 Rooster Crow Counter</title>
+  <title>Rooster Crow Counter</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    h1 { font-size: 2.5em; }
-    p { font-size: 1.2em; }
     #count { font-size: 2em; color: darkgreen; }
-    #confidence { font-size: 1.2em; color: blue; }
     #error { color: red; margin-top: 20px; }
-    button { padding: 10px 20px; font-size: 1.1em; margin-top: 20px; cursor: pointer; }
-    #debugPanel { display: none; margin-top: 20px; border: 1px solid #ccc; padding: 10px; max-height: 200px; overflow-y: auto; text-align: left; background: #f9f9f9; }
   </style>
 </head>
 <body>
@@ -20,86 +15,54 @@
   <p>Detected Class: <span id="label">None</span></p>
   <p>Confidence: <span id="confidence">0%</span></p>
   <p>Crow Count: <span id="count">0</span></p>
-  <button id="startBtn">🎤 Start Listening</button>
+  <button id="startBtn">🎙️ Start Listening</button>
   <p id="error"></p>
 
-  <button id="toggleDebug">Show Debug Panel</button>
-  <div id="debugPanel"></div>
-
-  <!-- Load Teachable Machine Audio library -->
+  <!-- ✅ FIXED LIBRARY IMPORT -->
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/audio@0.8/dist/teachablemachine-audio.min.js"></script>
 
   <script>
     const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
-    const modelURL = URL + "model.json";
-    const metadataURL = URL + "metadata.json";
-
     let model, recognizer;
-    let count = 0;
-    let lastDetectedTime = 0;
+    let count = 0, lastDetectedTime = 0;
 
     async function init() {
       try {
-        document.getElementById("status").textContent = "Requesting microphone access...";
         await navigator.mediaDevices.getUserMedia({ audio: true });
-
         document.getElementById("status").textContent = "Loading model...";
-        model = await tmAudio.load(modelURL, metadataURL);
+
+        model = await tmAudio.load(URL + "model.json", URL + "metadata.json");
         recognizer = new tmAudio.AudioRecognizer(model);
         await recognizer.open();
 
-        document.getElementById("status").textContent = "Model Loaded — Listening...";
+        document.getElementById("status").textContent = "Listening...";
 
-        recognizer.listen((result) => {
-          const highest = result.scores.reduce((prev, score, idx) => {
-            return score > prev.score ? {score, idx} : prev;
-          }, {score: -Infinity, idx: -1});
-
-          const label = model.labels[highest.idx];
-          const confidence = (highest.score * 100).toFixed(1);
+        recognizer.listen(result => {
+          const scores = result.scores;
+          const maxIdx = scores.indexOf(Math.max(...scores));
+          const label = model.labels[maxIdx];
+          const confidence = (scores[maxIdx] * 100).toFixed(1);
 
           document.getElementById("label").textContent = label;
           document.getElementById("confidence").textContent = confidence + "%";
 
-          logDebug(`Detected: ${label} (${confidence}%)`);
-
-          if (label === "Cockerel" && highest.score > 0.8) {
+          if (label === "Cockerel" && confidence > 80) {
             const now = Date.now();
             if (now - lastDetectedTime > 2000) {
               count++;
               lastDetectedTime = now;
               document.getElementById("count").textContent = count;
-              logDebug("Crow counted! Total: " + count);
             }
           }
         });
       } catch (err) {
         document.getElementById("status").textContent = "Error";
         document.getElementById("error").textContent = err.message;
-        logDebug("Error: " + err.message);
-        console.error("Crow Counter Error:", err);
+        console.error(err);
       }
-    }
-
-    function logDebug(msg) {
-      const panel = document.getElementById("debugPanel");
-      const line = document.createElement("div");
-      line.textContent = new Date().toLocaleTimeString() + " - " + msg;
-      panel.appendChild(line);
-      panel.scrollTop = panel.scrollHeight;
     }
 
     document.getElementById("startBtn").addEventListener("click", init);
-    document.getElementById("toggleDebug").addEventListener("click", () => {
-      const panel = document.getElementById("debugPanel");
-      if (panel.style.display === "none") {
-        panel.style.display = "block";
-        document.getElementById("toggleDebug").textContent = "Hide Debug Panel";
-      } else {
-        panel.style.display = "none";
-        document.getElementById("toggleDebug").textContent = "Show Debug Panel";
-      }
-    });
   </script>
 </body>
 </html>
