--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rooster Crow Counter</title>
+  <title>🐓 Rooster Crow Counter</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+    h1 { font-size: 2.5em; }
+    p { font-size: 1.2em; }
     #count { font-size: 2em; color: darkgreen; }
     #error { color: red; margin-top: 20px; }
+    button { padding: 10px 20px; font-size: 1.2em; margin-top: 20px; cursor: pointer; }
   </style>
+  <!-- ✅ Load Teachable Machine Audio library -->
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/audio@0.8/dist/teachablemachine-audio.min.js"></script>
 </head>
 <body>
   <h1>🐓 Rooster Crow Counter</h1>
@@ -18,47 +23,53 @@
   <button id="startBtn">🎙️ Start Listening</button>
   <p id="error"></p>
 
-  <!-- ✅ FIXED LIBRARY IMPORT -->
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/audio@0.8/dist/teachablemachine-audio.min.js"></script>
-
   <script>
     const URL = "https://teachablemachine.withgoogle.com/models/PGfGCUsH1/";
+    const modelURL = URL + "model.json";
+    const metadataURL = URL + "metadata.json";
+
     let model, recognizer;
-    let count = 0, lastDetectedTime = 0;
+    let count = 0;
+    let lastDetectedTime = 0;
 
     async function init() {
       try {
+        console.log("Requesting microphone access...");
         await navigator.mediaDevices.getUserMedia({ audio: true });
         document.getElementById("status").textContent = "Loading model...";
 
-        model = await tmAudio.load(URL + "model.json", URL + "metadata.json");
-        recognizer = new tmAudio.AudioRecognizer(model);
+        console.log("Loading model from:", modelURL);
+        model = await tmAudio.load(modelURL, metadataURL);
+        recognizer = new tmAudio.Recognizer(model);
         await recognizer.open();
 
-        document.getElementById("status").textContent = "Listening...";
+        document.getElementById("status").textContent = "Model Loaded — Listening...";
+        console.log("Model loaded, now listening...");
 
-        recognizer.listen(result => {
-          const scores = result.scores;
-          const maxIdx = scores.indexOf(Math.max(...scores));
-          const label = model.labels[maxIdx];
-          const confidence = (scores[maxIdx] * 100).toFixed(1);
+        recognizer.listen((result) => {
+          const highest = result.scores.reduce((prev, score, idx) => {
+            return score > prev.score ? {score, idx} : prev;
+          }, {score: -Infinity, idx: -1});
+          const label = model.labels[highest.idx];
+          const confidence = Math.round(highest.score * 100);
 
           document.getElementById("label").textContent = label;
           document.getElementById("confidence").textContent = confidence + "%";
 
-          if (label === "Cockerel" && confidence > 80) {
+          if (label === "Cockerel") {
             const now = Date.now();
             if (now - lastDetectedTime > 2000) {
               count++;
               lastDetectedTime = now;
               document.getElementById("count").textContent = count;
+              console.log("Crow Count:", count);
             }
           }
         });
       } catch (err) {
         document.getElementById("status").textContent = "Error";
         document.getElementById("error").textContent = err.message;
-        console.error(err);
+        console.error("Crow Counter Error:", err);
       }
     }
 
